force-app/main/default/objects/ISUF_Fund_Notes__c/ISUF_Fund_Notes__c.object-meta.xml
<CustomObject>
    <description>Custom ISUF object for Fund Notes used by DCS and Stewardship (Annual Reporting)</description>
    <label>Fund Note</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Fund Note #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>