force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Annual_Reporting_Watch_For_Notes__c.field-meta.xml
<CustomField>
    <fullName>Annual_Reporting_Watch_For_Notes__c</fullName>
    <label>Annual Reporting Watch For Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>