force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <label>Assigned To Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>