force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Watch_Fors</relationshipName>
    <type>Lookup</type>
</CustomField>