force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Followup_Required__c.field-meta.xml
<CustomField>
    <fullName>Followup_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup Required</label>
    <type>Checkbox</type>
</CustomField>