force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Fund_Review_Number__c.field-meta.xml
<CustomField>
    <fullName>Fund_Review_Number__c</fullName>
    <externalId>true</externalId>
    <label>Fund Review Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>