force-app/main/default/objects/ISUF_Fund_Notes__c/fields/In_House_Vendor__c.field-meta.xml
<CustomField>
    <fullName>In_House_Vendor__c</fullName>
    <inlineHelpText>This field is not automatically cleared at any point. It is independent from the Annual Reporting fields that are cleared annually and repopulated as necessary.</inlineHelpText>
    <label>In House/Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>