force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accumulated Cash</fullName>
            </value>
            <value>
                <fullName>Difficult to Admin Under Current Agreemt</fullName>
            </value>
            <value>
                <fullName>Gifting Issue</fullName>
            </value>
            <value>
                <fullName>Low Balance</fullName>
            </value>
            <value>
                <fullName>Low or No Spending</fullName>
            </value>
            <value>
                <fullName>Low Priority Program</fullName>
            </value>
            <value>
                <fullName>Needs Gift Agreement</fullName>
            </value>
            <value>
                <fullName>Newly Established/No agreement</fullName>
            </value>
            <value>
                <fullName>No Issues Found</fullName>
            </value>
            <value>
                <fullName>No Qualified Applicants</fullName>
            </value>
            <value>
                <fullName>Not Yet Funded</fullName>
            </value>
            <value>
                <fullName>OLD:Newly Established/NotYetFunded/NoGA</fullName>
            </value>
            <value>
                <fullName>Overspent</fullName>
            </value>
            <value>
                <fullName>Program No Longer Active</fullName>
            </value>
            <value>
                <fullName>Scholarship criteria is not matched</fullName>
            </value>
            <value>
                <fullName>Use of Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>