force-app/main/default/objects/ISUF_Fund_Notes__c/fields/ISUF_Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Reviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISUF Reviewer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fund_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>