force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Watch_Fors</relationshipName>
    <type>Lookup</type>
</CustomField>