force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>497 Review</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Construction &amp; building funds review</fullName>
            </value>
            <value>
                <fullName>Endowment Report Review</fullName>
            </value>
            <value>
                <fullName>Exception Reports</fullName>
            </value>
            <value>
                <fullName>Faculty Accounts report</fullName>
            </value>
            <value>
                <fullName>General Support Review</fullName>
            </value>
            <value>
                <fullName>Inactive - not used!</fullName>
            </value>
            <value>
                <fullName>Misc. Support Review</fullName>
            </value>
            <value>
                <fullName>New Account Review</fullName>
            </value>
            <value>
                <fullName>Overspent</fullName>
            </value>
            <value>
                <fullName>Provost office follow up</fullName>
            </value>
            <value>
                <fullName>Scholarship Review</fullName>
            </value>
            <value>
                <fullName>Scholarships report - not used!</fullName>
            </value>
            <value>
                <fullName>Step Down Language Review</fullName>
            </value>
            <value>
                <fullName>Three-Year Review</fullName>
            </value>
            <value>
                <fullName>Underspent - not used!</fullName>
            </value>
            <value>
                <fullName>Program and Project Review</fullName>
            </value>
            <value>
                <fullName>Spending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>