force-app/main/default/objects/ISUF_Fund_Notes__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <label>Reviewer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>