force-app/main/default/objects/ISUF_Fund_Notes__c/recordTypes/Annual_Reporting.recordType-meta.xml
<RecordType>
    <fullName>Annual_Reporting</fullName>
    <active>true</active>
    <description>Watch Fors used for Annual Reporting, connected to Funds, Constituents and Orgs</description>
    <label>Annual Reporting</label>
</RecordType>