force-app/main/default/objects/ISUF_Fund_Notes__c/recordTypes/Fund_Notes.recordType-meta.xml
<RecordType>
    <fullName>Fund_Notes</fullName>
    <active>true</active>
    <description>General notes on Funds for DCS</description>
    <label>Fund Notes</label>
</RecordType>