force-app/main/default/objects/ISUF_Fund_Notes__c/listViews/Accumulated_Cash.listView-meta.xml
<ListView>
    <fullName>Accumulated_Cash</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Fund__c</columns>
    <columns>ISUF_Assigned_To__c</columns>
    <columns>ISUF_Reviewer_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Review_Date__c</columns>
    <columns>Review_Note__c</columns>
    <columns>Review_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue__c</field>
        <operation>equals</operation>
        <value>Accumulated Cash</value>
    </filters>
    <label>Accumulated Cash</label>
</ListView>