force-app/main/default/objects/ISUF_Fund_Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Review_Date__c</columns>
    <columns>NAME</columns>
    <columns>Followup_Required__c</columns>
    <columns>Fund__c</columns>
    <columns>Fund_Review_Number__c</columns>
    <columns>ISUF_Assigned_To__c</columns>
    <columns>Issue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>