force-app/main/default/objects/ISUF_Fund_Notes__c/listViews/Review_this_week.listView-meta.xml
<ListView>
    <fullName>Review_this_week</fullName>
    <columns>Review_Date__c</columns>
    <columns>NAME</columns>
    <columns>Followup_Required__c</columns>
    <columns>Fund__c</columns>
    <columns>Fund_Review_Number__c</columns>
    <columns>ISUF_Assigned_To__c</columns>
    <columns>Issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Review this week</label>
</ListView>